--- a/src/app/components/meeting/meeting.component.html
+++ b/src/app/components/meeting/meeting.component.html
@@ -19,7 +19,7 @@
             id="meetingTime"
           />
         </div>
-        <!-- <label for="HostUser" class="mb-2">Toplantıyı Oluşturan Kişi</label>
+         <label for="HostUser" class="mb-2">Toplantıyı Oluşturan Kişi</label>
         <div class="form-floating mb-2">
           <input
             type="text"
@@ -27,7 +27,7 @@
             formControlName="HostUser"
             id="HostUser"
           />
-        </div> -->
+        </div> 
         <label for="MeetingPlace" class="mb-2">Toplantı Yeri</label>
         <div class="form-floating mb-2">
           <input
