--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
         width="200"
         height="200"
       />
-      <h1 class="h3 mb-3 fw-normal">Giriş Yapınızzz</h1>
+      <h1 class="h3 mb-3 fw-normal">Giriş Yapınız</h1>
 
       <div class="form-floating">
         <input
