--- a/src/app/components/users/user/user.component.html
+++ b/src/app/components/users/user/user.component.html
@@ -1,11 +1,7 @@
 <div class="card mb-3" style="max-width: 1000px">
   <div class="row g-0">
     <div class="col-md-4">
-      <img
-        src="https://www.shutterstock.com/shutterstock/photos/1040084344/display_1500/stock-vector-man-icon-vector-1040084344.jpg"
-        class="img-fluid rounded-start"
-        alt="..."
-      />
+      <img src="/src/İmages/UserProfileİmage.jpg" title="title" alt="alt "/>
     </div>
     <div class="col-md-8">
       <div class="card-body" *ngFor="let user of users">
