pulled elifmarali's changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,6 +11,8 @@
           <button type="button">
             Ücretsiz deneyimleyin
             <svg
+              width="15"
+              height="15s"
               viewBox="0 0 24 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -37,8 +39,6 @@
               </defs>
             </svg></button
         ></a>
-        <p id="gray">Kredi kartına gerek yok.</p>
-
       </div>
       <div class="col-lg-1"></div>
       <div class="col-sm-12 col-md-5 col-ld-5 mb-5" id="sec">
@@ -109,8 +109,8 @@
               Takviminizi düzenli tutun ve müşteriler ve ekip arkadaşlarınızla
               daha hızlı toplantı rezervasyonu yapın.
             </p>
-            <a href="#" class="btn btn-primary" id="smallButton"
-              >Go somewhere</a
+            <a routerLink="/register" class="btn btn-primary" id="smallButton"
+              >Ücretsiz dene</a
             >
           </div>
         </div>
@@ -135,8 +135,8 @@
               Davetlere ve rezervasyon sayfalarına ekip arkadaşları ekleyin ve
               paylaşılan takvimleri kullanın.
             </p>
-            <a href="#" class="btn btn-primary" id="smallButton"
-              >Go somewhere</a
+            <a routerLink="/register" class="btn btn-primary" id="smallButton"
+              >Ücretsiz dene</a
             >
           </div>
         </div>
@@ -161,9 +161,10 @@
               Tüm kuruluşunuzun planlama ihtiyaçlarını güvenli bir şekilde
               yönetin.
             </p>
-            <a href="#" class="btn btn-primary" id="smallButton"
-              >Go somewhere</a
-            >
+
+            <a routerLink="/register" class="btn btn-primary" id="smallButton"
+              >Ücretsiz dene
+            </a>
           </div>
         </div>
       </div>
@@ -221,7 +222,7 @@
           class="text-center p-3"
           style="background-color: rgba(0, 0, 0, 0.2)"
         >
-          © 2020 Copyright
+          © 2023 Copyright
           <a class="text-dark" href="#"></a>
         </div>
         <!-- Copyright -->
