Toastr messages changed

--- a/src/app/components/meeting/meeting.component.html
+++ b/src/app/components/meeting/meeting.component.html
@@ -115,7 +115,7 @@
               </div>
             </div>
            <div class="col-sm-12 col-md-12 col-lg-12">
-              <label for="MeetingDescription" class="mb-2 fs-4">Toplantı İsmi</label>
+              <label for="MeetingDescription" class="mb-2 fs-4">Toplantı açıklaması</label>
               <div class="form-floating mb-2">
                 <input
                   type="text"
