--- a/src/app/components/users/user/user.component.html
+++ b/src/app/components/users/user/user.component.html
@@ -13,7 +13,7 @@
           <div class="col-md-6 col-sm-12 col-lg-6 ml-3">
             <div class="card-body" *ngFor="let user of users"> 
             <h5 class="card-title fs-1">Kullanıcı Bilgisi</h5>
-            <p class="card-text fs-4">Ad: {{ user.lastName }}</p>
+            <p class="card-text fs-4">Ad: {{ user.firstName }}</p>
             <p class="card-text fs-4">Soyad: {{ user.lastName }}</p>
             <p class="card-text fs-4">E-Mail: {{ user.email }}</p>
             <button routerLink="/user/update" class="btn">Güncelle</button>
